# HScheme

./: .gitignore  HScheme.cabal  LICENSE  README.md
app/: Main.hs
example/: Newton.scm  fast-expt.scm  lib.scm  map.scm  prime.scm
src/: BasicLib.hs  BuiltIn.hs  Eval.hs  Expression.hs  Interpret.hs  Parser.hs  Repl.hs
test/: EvalSpec.hs  ParserSpec.hs
