name:                HScheme
version:             0.1.0.0
synopsis:            Initial project template from stack, using hspec and quickcheck
description:         Please see README.md
homepage:            https://github.com/Transpeptidase/HScheme#readme
license:             BSD3
license-file:        LICENSE
author:              WangQing
maintainer:          wangqing_x@163.com
copyright:           Copyright: (c) 2016 wq
category:            hello
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Expression
                     , Parser
                     , Eval
                     , BuiltIn
                     , Repl
  build-depends:       base >= 4.7 && < 5
                     , containers
  default-language:    Haskell2010

executable HScheme
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , HScheme
                     , containers
  default-language:    Haskell2010

test-suite HScheme-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , HScheme
                     , hspec
                     , QuickCheck
                     , containers
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/Transpeptidase/HScheme
